# rust_logger_benchmark

./: .gitignore  Cargo.toml  README.md  benchmark.sh
benches/: combined_bench.rs  common.rs  env_logger_bench.rs  fern_bench.rs  ftlog_bench.rs  log4rs_bench.rs  slog_bench.rs  tracing_bench.rs
results/: benchmark_results.md  benchmark_results_20250413_151720.txt
scripts/: README.md  generate_results.py  requirements.txt  run_benchmarks.sh
src/: lib.rs  logger_setup.rs  main.rs  metrics.rs
src/logger_setup/: benchmark_setups.rs  common.rs  mod.rs  standard_setups.rs
