[package]
name = "log_benchmark"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Standard logging framework
log = "0.4"
env_logger = "0.11.7"

# Tracing framework
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Structured logging
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"

# Log4rs
log4rs = "1.3.0"

# Fern
fern = "0.7.1"

# Ftlog
ftlog = "0.2.14"

# For benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"
chrono = "0.4.40"
core_affinity = "0.8"

[[bench]]
name = "env_logger_bench"
harness = false

[[bench]]
name = "tracing_bench"
harness = false

[[bench]]
name = "slog_bench"
harness = false

[[bench]]
name = "log4rs_bench"
harness = false

[[bench]]
name = "fern_bench"
harness = false

[[bench]]
name = "ftlog_bench"
harness = false
