[package]
name = "log_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Standard logging framework
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.80"

# Tracing framework
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "time"] }

# Add time crate dependency (needed for tracing-subscriber's time feature)
time = { version = "0.3", features = ["formatting", "macros"] }

# Structured logging
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.7.0"
slog-json = "2.6.1"

# Log4rs
log4rs = "1.3.0"

# Fern
fern = "0.7.1"

# Ftlog
ftlog = "0.2.15"

# For benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"
chrono = "0.4.40"

# Define features (bench feature no longer needed for common code)
[features]
default = []
bench = []   # Feature to enable benchmark-specific code

# Remove individual bench targets, keep only combined_bench

[[bench]]
name = "combined_bench"
harness = false
# Feature requirement no longer needed here either
